--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -46,7 +46,7 @@
     "MessageErrorLoadingSupporterInfo": "Se present\u00f3 un error al cargar la informaci\u00f3n del aficionado. Por favor int\u00e9ntelo m\u00e1s tarde.",
     "MessageLinkYourSupporterKey": "Enlaza tu clave de aficionado con hasta {0} miembros de Emby Connect para disfrutar de acceso gratuito a la siguientes aplicaciones:",
     "HeaderConfirmRemoveUser": "Eliminar Usuario",
-    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Select the device to control by clicking the cast icon in the upper right corner. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageSwipeDownOnRemoteControl": "Bienvenidos al control remoto. Seleccione el equipo para controlar haciendo clic en el icono en la esquina de arriba de la parte derecha. Deslizar hacia abajo en cualquier parte de la pantalla para regresar a donde usted estaba anteriormente.",
     "MessageConfirmRemoveConnectSupporter": "\u00bfEst\u00e1 seguro de querer eliminar los beneficios adicionales de aficionado de este usuario?",
     "ValueTimeLimitSingleHour": "L\u00edmite de tiempo: 1 hora",
     "ValueTimeLimitMultiHour": "L\u00edmite de tiempo: {0} horas",
@@ -97,7 +97,7 @@
     "HeaderSupporterBenefit": "La membres\u00eda de aficionado proporciona beneficios adicionales tales como acceso a sincronizaci\u00f3n, complementos premium, contenido de canales de Internet y m\u00e1s. {0}Conocer m\u00e1s{1}.",
     "LabelSyncNoTargetsHelp": "Parece que actualmente no cuentas con ninguna app que soporte sinc.",
     "HeaderWelcomeToProjectServerDashboard": "Bienvenido al Panel de Control de Emby",
-    "HeaderWelcomeToProjectWebClient": "Bienvenido al Cliente Web de Emby",
+    "HeaderWelcomeToProjectWebClient": "Bienvenido a Emby",
     "ButtonTakeTheTour": "Haga el recorrido",
     "HeaderWelcomeBack": "\u00a1Bienvenido nuevamente!",
     "TitlePlugins": "Complementos",
@@ -207,7 +207,7 @@
     "HeaderResume": "Continuar",
     "HeaderMyViews": "Mis Vistas",
     "HeaderLibraryFolders": "Carpetas de Medios",
-    "HeaderLatestMedia": "Medios Recientes",
+    "HeaderLatestMedia": "Agregadas Recientemente",
     "ButtonMoreItems": "M\u00e1s...",
     "ButtonMore": "M\u00e1s",
     "HeaderFavoriteMovies": "Pel\u00edculas Preferidas",
@@ -757,10 +757,13 @@
     "SyncJobItemStatusCancelled": "Cancelado",
     "LabelProfile": "Perf\u00edl:",
     "LabelBitrateMbps": "Tasa de bits (Mbps):",
-    "EmbyIntroDownloadMessage": "To download and install Emby Server visit {0}.",
-    "ButtonNewServer": "New Server",
-    "ButtonSignInWithConnect": "Sign in with Emby Connect",
-    "HeaderNewServer": "New Server",
-    "MyDevice": "My Device",
-    "ButtonRemote": "Remote"
+    "EmbyIntroDownloadMessage": "Para bajar e instalar el Servidor Emby visite {0}.",
+    "ButtonNewServer": "Nuevo Servidor",
+    "ButtonSignInWithConnect": "Inicie con su cuenta de Emby Connect",
+    "HeaderNewServer": "Nuevo Servidor",
+    "MyDevice": "Mi Equipo",
+    "ButtonRemote": "Remoto",
+    "TabInfo": "Info",
+    "TabCast": "Reparto",
+    "TabScenes": "Escenas"
 }
