--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -46,7 +46,7 @@
     "MessageErrorLoadingSupporterInfo": "Il y a eu une erreur lors du chargement des informations de supporter. Veuillez r\u00e9essayer plus tard.",
     "MessageLinkYourSupporterKey": "Liez votre cl\u00e9 de supporteur avec un maximum de {0} membres Emby Connect pour b\u00e9n\u00e9ficier de l'acc\u00e8s gratuit aux applications suivantes :",
     "HeaderConfirmRemoveUser": "Supprimer l'utilisateur",
-    "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Select the device to control by clicking the cast icon in the upper right corner. Swipe down anywhere on this screen to go back to where you came from.",
+    "MessageSwipeDownOnRemoteControl": "Bienvenue dans votre t\u00e9l\u00e9commande. S\u00e9lectionnez l'appareil \u00e0 contr\u00f4ler en cliquant sur l'ic\u00f4ne cast dans le coin en haut \u00e0 droite. Faites glissez votre doigt vers le bas depuis n'importe o\u00f9 sur cet \u00e9cran pour revenir d'o\u00f9 vous veniez.",
     "MessageConfirmRemoveConnectSupporter": "Etes-vous s\u00fbr de vouloir supprimer les avantages additionnels de supporteur pour cet utilisateur ?",
     "ValueTimeLimitSingleHour": "Limite de temps : 1 heure",
     "ValueTimeLimitMultiHour": "Limite de temps : {0} heures",
@@ -97,7 +97,7 @@
     "HeaderSupporterBenefit": "Un partenariat de membre supporteur apporte des avantages suppl\u00e9mentaires, comme l'acc\u00e8s \u00e0 la synchronisation, aux plugins premiums, aux contenus des cha\u00eenes Internet, et plus encore. {0}En savoir plus{1}.",
     "LabelSyncNoTargetsHelp": "Il semble que vous n'ayez actuellement aucune application qui supporte la synchronisation.",
     "HeaderWelcomeToProjectServerDashboard": "Bienvenue dans le tableau de bord du serveur Emby",
-    "HeaderWelcomeToProjectWebClient": "Bienvenue dans client Web Emby",
+    "HeaderWelcomeToProjectWebClient": "Bienvenue dans Emby",
     "ButtonTakeTheTour": "Visite guid\u00e9e",
     "HeaderWelcomeBack": "Bienvenue !",
     "TitlePlugins": "Plugins",
@@ -757,10 +757,13 @@
     "SyncJobItemStatusCancelled": "Annul\u00e9",
     "LabelProfile": "Profil :",
     "LabelBitrateMbps": "D\u00e9bit (Mbps) :",
-    "EmbyIntroDownloadMessage": "To download and install Emby Server visit {0}.",
-    "ButtonNewServer": "New Server",
-    "ButtonSignInWithConnect": "Sign in with Emby Connect",
-    "HeaderNewServer": "New Server",
-    "MyDevice": "My Device",
-    "ButtonRemote": "Remote"
+    "EmbyIntroDownloadMessage": "Pour t\u00e9l\u00e9charger et installer le serveur Emby, visitez {0}.",
+    "ButtonNewServer": "Nouveau serveur",
+    "ButtonSignInWithConnect": "Se connecter avec Emby Connect",
+    "HeaderNewServer": "Nouveau serveur",
+    "MyDevice": "Mon appareil",
+    "ButtonRemote": "T\u00e9l\u00e9commande",
+    "TabInfo": "Info",
+    "TabCast": "Distribution",
+    "TabScenes": "Sc\u00e8nes"
 }
