--- a/MediaBrowser.Server.Implementations/Localization/Server/cs.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/cs.json
@@ -1,5 +1,66 @@
 {
-    "TabWebClient": "Web klient",
+    "LabelExit": "Zav\u0159\u00edt",
+    "LabelVisitCommunity": "Nav\u0161t\u00edvit komunitu",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Standardn\u00ed",
+    "LabelApiDocumentation": "Api Documentation",
+    "LabelDeveloperResources": "Developer Resources",
+    "LabelBrowseLibrary": "Proch\u00e1zet knihovnu",
+    "LabelConfigureServer": "Configure Emby",
+    "LabelOpenLibraryViewer": "Otev\u0159\u00edt knihovnu",
+    "LabelRestartServer": "Restartovat server",
+    "LabelShowLogWindow": "Zobrazit okno z\u00e1znam\u016f",
+    "LabelPrevious": "P\u0159edchoz\u00ed",
+    "LabelFinish": "Dokon\u010dit",
+    "LabelNext": "Dal\u0161\u00ed",
+    "LabelYoureDone": "Hotovo!",
+    "WelcomeToProject": "Welcome to Emby!",
+    "ThisWizardWillGuideYou": "Tento pr\u016fvodce V\u00e1m pom\u016f\u017ee proj\u00edt procesem nastaven\u00ed. Pro za\u010d\u00e1tek vyberte jazyk.",
+    "TellUsAboutYourself": "\u0158ekn\u011bte n\u00e1m n\u011bco o sob\u011b",
+    "ButtonQuickStartGuide": "Quick start guide",
+    "LabelYourFirstName": "Va\u0161e k\u0159estn\u00ed jm\u00e9no:",
+    "MoreUsersCanBeAddedLater": "Dal\u0161\u00ed u\u017eivatele m\u016f\u017eete p\u0159idat pozd\u011bji na n\u00e1st\u011bnce.",
+    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "LabelWindowsService": "Slu\u017eba Windows",
+    "AWindowsServiceHasBeenInstalled": "Slu\u017eba Windows byla nainstalov\u00e1na.",
+    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro2": "Pokud pou\u017e\u00edv\u00e1te Slu\u017ebu Windows berte na v\u011bdom\u00ed, \u017ee nem\u016f\u017ee b\u00fdt spu\u0161t\u011bna z\u00e1rove\u0148 s programem v oznamovac\u00ed oblasti. Bude nutn\u00e9 b\u011b\u017e\u00edc\u00ed aplikaci v oznamovac\u00ed oblasti ukon\u010dit. Slu\u017eba Windows mus\u00ed b\u00fdt z\u00e1rove\u0148 nakonfigurov\u00e1na s pr\u00e1vy administr\u00e1tora v ovl\u00e1dac\u00edch panelech. V tuto chv\u00edli slu\u017eba neumo\u017e\u0148uje automatickou aktualizaci, bude proto nutn\u00e9 novou verzi nainstalovat ru\u010dn\u011b.",
+    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "LabelConfigureSettings": "Konfigurovat nastaven\u00ed",
+    "LabelEnableVideoImageExtraction": "Povolit extrahov\u00e1n\u00ed obr\u00e1zku ze souboru",
+    "VideoImageExtractionHelp": "Pro videa, kter\u00e9 je\u0161t\u011b nemaj\u00ed obr\u00e1zky obalu, a zat\u00edm nejsme schopni je dohledat. Tato operace vy\u017eaduje n\u011bjak\u00fd ten \u010das nav\u00edc, ve v\u00fdsledku ale p\u0159isp\u011bje k hez\u010d\u00edmu zobrazen\u00ed knihovny.",
+    "LabelEnableChapterImageExtractionForMovies": "Extrahov\u00e1n\u00ed obr\u00e1zk\u016f sc\u00e9n pro Filmy",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelEnableAutomaticPortMapping": "Povolit automatick\u00e9 mapov\u00e1n\u00ed port\u016f",
+    "LabelEnableAutomaticPortMappingHelp": "UPnP umo\u017e\u0148uje automatick\u00e9 nastaven\u00ed routeru pro vzd\u00e1len\u00fd p\u0159\u00edstup. Nemus\u00ed fungovat s n\u011bkter\u00fdmi typy router\u016f.",
+    "HeaderTermsOfService": "Emby Terms of Service",
+    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
+    "OptionIAcceptTermsOfService": "I accept the terms of service",
+    "ButtonPrivacyPolicy": "Privacy policy",
+    "ButtonTermsOfService": "Terms of Service",
+    "HeaderDeveloperOptions": "Developer Options",
+    "OptionEnableWebClientResponseCache": "Enable web client response caching",
+    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
+    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
+    "LabelDashboardSourcePath": "Web client source path:",
+    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
+    "ButtonConvertMedia": "Convert media",
+    "ButtonOrganize": "Organize",
+    "LinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderSupporterBenefits": "Supporter Benefits",
+    "HeaderAddUser": "Add User",
+    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
+    "LabelPinCode": "Pin code:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
+    "ButtonOk": "Ok",
+    "ButtonCancel": "Zru\u0161it",
+    "ButtonExit": "Exit",
+    "ButtonNew": "Nov\u00e9",
+    "HeaderTV": "TV",
+    "HeaderAudio": "Audio",
+    "HeaderVideo": "Video",
     "HeaderPaths": "Paths",
     "CategorySync": "Sync",
     "TabPlaylist": "Playlist",
@@ -1372,66 +1433,10 @@
     "HeaderNewServer": "New Server",
     "ButtonChangeServer": "Change Server",
     "HeaderConnectToServer": "Connect to Server",
-    "LabelExit": "Zav\u0159\u00edt",
-    "LabelVisitCommunity": "Nav\u0161t\u00edvit komunitu",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Standardn\u00ed",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "Proch\u00e1zet knihovnu",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelOpenLibraryViewer": "Otev\u0159\u00edt knihovnu",
-    "LabelRestartServer": "Restartovat server",
-    "LabelShowLogWindow": "Zobrazit okno z\u00e1znam\u016f",
-    "LabelPrevious": "P\u0159edchoz\u00ed",
-    "LabelFinish": "Dokon\u010dit",
-    "LabelNext": "Dal\u0161\u00ed",
-    "LabelYoureDone": "Hotovo!",
-    "WelcomeToProject": "Welcome to Emby!",
-    "ThisWizardWillGuideYou": "Tento pr\u016fvodce V\u00e1m pom\u016f\u017ee proj\u00edt procesem nastaven\u00ed. Pro za\u010d\u00e1tek vyberte jazyk.",
-    "TellUsAboutYourself": "\u0158ekn\u011bte n\u00e1m n\u011bco o sob\u011b",
-    "ButtonQuickStartGuide": "Quick start guide",
-    "LabelYourFirstName": "Va\u0161e k\u0159estn\u00ed jm\u00e9no:",
-    "MoreUsersCanBeAddedLater": "Dal\u0161\u00ed u\u017eivatele m\u016f\u017eete p\u0159idat pozd\u011bji na n\u00e1st\u011bnce.",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
-    "LabelWindowsService": "Slu\u017eba Windows",
-    "AWindowsServiceHasBeenInstalled": "Slu\u017eba Windows byla nainstalov\u00e1na.",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
-    "WindowsServiceIntro2": "Pokud pou\u017e\u00edv\u00e1te Slu\u017ebu Windows berte na v\u011bdom\u00ed, \u017ee nem\u016f\u017ee b\u00fdt spu\u0161t\u011bna z\u00e1rove\u0148 s programem v oznamovac\u00ed oblasti. Bude nutn\u00e9 b\u011b\u017e\u00edc\u00ed aplikaci v oznamovac\u00ed oblasti ukon\u010dit. Slu\u017eba Windows mus\u00ed b\u00fdt z\u00e1rove\u0148 nakonfigurov\u00e1na s pr\u00e1vy administr\u00e1tora v ovl\u00e1dac\u00edch panelech. V tuto chv\u00edli slu\u017eba neumo\u017e\u0148uje automatickou aktualizaci, bude proto nutn\u00e9 novou verzi nainstalovat ru\u010dn\u011b.",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
-    "LabelConfigureSettings": "Konfigurovat nastaven\u00ed",
-    "LabelEnableVideoImageExtraction": "Povolit extrahov\u00e1n\u00ed obr\u00e1zku ze souboru",
-    "VideoImageExtractionHelp": "Pro videa, kter\u00e9 je\u0161t\u011b nemaj\u00ed obr\u00e1zky obalu, a zat\u00edm nejsme schopni je dohledat. Tato operace vy\u017eaduje n\u011bjak\u00fd ten \u010das nav\u00edc, ve v\u00fdsledku ale p\u0159isp\u011bje k hez\u010d\u00edmu zobrazen\u00ed knihovny.",
-    "LabelEnableChapterImageExtractionForMovies": "Extrahov\u00e1n\u00ed obr\u00e1zk\u016f sc\u00e9n pro Filmy",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
-    "LabelEnableAutomaticPortMapping": "Povolit automatick\u00e9 mapov\u00e1n\u00ed port\u016f",
-    "LabelEnableAutomaticPortMappingHelp": "UPnP umo\u017e\u0148uje automatick\u00e9 nastaven\u00ed routeru pro vzd\u00e1len\u00fd p\u0159\u00edstup. Nemus\u00ed fungovat s n\u011bkter\u00fdmi typy router\u016f.",
-    "HeaderTermsOfService": "Emby Terms of Service",
-    "MessagePleaseAcceptTermsOfService": "Please accept the terms of service and privacy policy before continuing.",
-    "OptionIAcceptTermsOfService": "I accept the terms of service",
-    "ButtonPrivacyPolicy": "Privacy policy",
-    "ButtonTermsOfService": "Terms of Service",
-    "HeaderDeveloperOptions": "Developer Options",
-    "OptionEnableWebClientResponseCache": "Enable web client response caching",
-    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
-    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
-    "LabelDashboardSourcePath": "Web client source path:",
-    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
-    "ButtonConvertMedia": "Convert media",
-    "ButtonOrganize": "Organize",
-    "LinkedToEmbyConnect": "Linked to Emby Connect",
-    "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
-    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
-    "LabelPinCode": "Pin code:",
-    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
-    "HeaderSync": "Sync",
-    "ButtonOk": "Ok",
-    "ButtonCancel": "Zru\u0161it",
-    "ButtonExit": "Exit",
-    "ButtonNew": "Nov\u00e9",
-    "HeaderTV": "TV",
-    "HeaderAudio": "Audio",
-    "HeaderVideo": "Video"
+    "OptionReportList": "List View",
+    "OptionReportStatistics": "Statistics",
+    "OptionReportGrouping": "Grouping",
+    "HeaderExport": "Export",
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
