--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -1,5 +1,4 @@
 {
-    "TabWebClient": "Webclient",
     "LabelExit": "Beenden",
     "LabelVisitCommunity": "Besuche die Community",
     "LabelGithub": "Github",
@@ -405,8 +404,8 @@
     "ButtonRefresh": "Aktualisieren",
     "ButtonAdvancedRefresh": "Erweiterte Aktualiserung",
     "OptionPriority": "Priorit\u00e4t",
-    "OptionRecordOnAllChannels": "Record on all channels",
-    "OptionRecordAnytime": "Record at any time",
+    "OptionRecordOnAllChannels": "Auf allen Kan\u00e4len aufzeichnen",
+    "OptionRecordAnytime": "Zu jeder Zeit aufzeichnen",
     "OptionRecordOnlyNewEpisodes": "Nehme nur neue Episoden auf",
     "HeaderRepeatingOptions": "Wiederholungs Einstellungen",
     "HeaderDays": "Tage",
@@ -552,7 +551,7 @@
     "LabelPublicHttpsPort": "\u00d6ffentliche HTTPS Portnummer:",
     "LabelPublicHttpsPortHelp": "Die \u00f6ffentliche Portnummer sollte einem lokalen HTTPS Port zugewiesen werden.",
     "LabelEnableHttps": "Gebe HTTPS als externe Adresse aus",
-    "LabelEnableHttpsHelp": "If enabled, the server will report an https url to clients as it's external address.",
+    "LabelEnableHttpsHelp": "Wenn eingeschaltet, wird der Server eine https url als externe Adresse an alle Clients melden.",
     "LabelHttpsPort": "Lokale HTTPS Portnummer:",
     "LabelHttpsPortHelp": "Die TCP Port-Nummer f\u00fcr sichere Emby https Verbindungen.",
     "LabelWebSocketPortNumber": "Web Socket Port Nummer:",
@@ -798,7 +797,7 @@
     "LabelMaxBitrateHelp": "Lege eine maximale Bitrate, f\u00fcr Anwendungsgebiete mit begrenzter Bandbreite oder bei durch die Endger\u00e4te auferlegten Banbdbreitenbegrenzungen, fest",
     "LabelMaxStreamingBitrate": "Maximale Streamingbitrate",
     "LabelMaxStreamingBitrateHelp": "W\u00e4hle die maximale Bitrate w\u00e4hrend des streamens.",
-    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
+    "LabelMaxChromecastBitrate": "Max Chromcast Datenrate:",
     "LabelMaxStaticBitrate": "Maximale Synchronisierungsbitrate ",
     "LabelMaxStaticBitrateHelp": "W\u00e4hle die maximale Bitrate f\u00fcr das synchronisieren von Inhalten mit hoher Qualit\u00e4t.",
     "LabelMusicStaticBitrate": "Musik Synchronisierungsbitrate:",
@@ -874,7 +873,7 @@
     "MessageNoSubtitleSearchResultsFound": "Keine Suchergebnisse gefunden",
     "TabDisplay": "Anzeige",
     "TabLanguages": "Sprachen",
-    "TabAppSettings": "App Settings",
+    "TabAppSettings": "App Einstellungen",
     "LabelEnableThemeSongs": "Aktiviere Titelmelodie",
     "LabelEnableBackdrops": "Aktiviere Hintergr\u00fcnde",
     "LabelEnableThemeSongsHelp": "Wenn aktiviert, wird die Titelmusik w\u00e4hrend dem Durchsuchen durch die Bibliothek im Hintergrund abgespielt",
@@ -1395,19 +1394,19 @@
     "LabelShowLibraryTileNamesHelp": "Legen Sie fest, ob Beschriftungen unter den Kacheln der Startseite angezeigt werden sollen.",
     "OptionEnableTranscodingThrottle": "aktiviere Drosselung",
     "OptionEnableTranscodingThrottleHelp": "Die Drosselung justiert die Transkodier-Geschwindigkeit, um die Server CPU Auslastung w\u00e4hrend der Wiedergabe zu minimieren.",
-    "LabelUploadSpeedLimit": "Upload speed limit (Mbps):",
+    "LabelUploadSpeedLimit": "Upload Geschwindigkeitslimit (Mbps):",
     "OptionAllowSyncTranscoding": "Erlaube Synchronisation die Transkodierung ben\u00f6tigen",
     "HeaderPlayback": "Medien Wiedergabe",
     "OptionAllowAudioPlaybackTranscoding": "Erlaube Audio-Wiedergabe die Transkodierung ben\u00f6tigt",
     "OptionAllowVideoPlaybackTranscoding": "Erlaube Video-Wiedergabe die Transkodierung ben\u00f6tigt",
-    "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
+    "OptionAllowMediaPlaybackTranscodingHelp": "Benutzer werden, basierend auf deren Einstellungen, eine aussagekr\u00e4ftige Nachricht erhalten, wenn Inhalte nicht abgespielt werden k\u00f6nnen.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (Mbps):",
+    "LabelRemoteClientBitrateLimit": "Entfernte Client Datenraten-Begrenzung (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "Eine optionale Streaming Datengrenze f\u00fcr alle Clients mit Fernzugriff. Dies verhindert, dass Clients eine h\u00f6here Bandbreite als die zur Verf\u00fcgung stehende Verbindung, anfragen.",
     "LabelConversionCpuCoreLimit": "CPU Kerne Limit:",
     "LabelConversionCpuCoreLimitHelp": "Begrenzt die Anzahl der verwendeten CPU Kerne w\u00e4hrend der Konvertierung f\u00fcr die Synchronisation.",
     "OptionEnableFullSpeedConversion": "Aktiviere Hochleistung-Konvertierung.",
-    "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
+    "OptionEnableFullSpeedConversionHelp": "Standardm\u00e4\u00dfig werden Synchronisations-Konvertierungen bei geringer Geschwindigkeit durchgef\u00fchrt um Ressourcen zu sparen.",
     "HeaderPlaylists": "Wiedergabeliste",
     "HeaderSelectDate": "Datum w\u00e4hlen",
     "HeaderWelcomeExclamation": "Willkommen!",
@@ -1418,20 +1417,26 @@
     "MyPreferencesWelcomeMessage2": "M\u00f6chten Sie Ihre Einstellungen nun festlegen?",
     "ToAccessPreferencesHelp": "Um Ihre Einstellungen sp\u00e4ter zu \u00e4ndern, klicken Sie ihr Benutzer-Icon im oberen rechten Bereich oder w\u00e4hlen Sie \"Meine Einstellungen\".",
     "HeaderViewStyles": "Zeige Stiele",
-    "LabelSelectViewStyles": "Enable enhanced presentations for:",
+    "LabelSelectViewStyles": "Aktiviere erweiterte Ansichten f\u00fcr:",
     "LabelSelectViewStylesHelp": "Wenn aktiviert werden Darstellungen von Kategorien mit Medieninformationen wie Empfehlungen, k\u00fcrzlich hinzugef\u00fcgt, Genres und weitere, angereichert. Wenn deaktiviert werden diese nur als simple Verzeichnisse dargestellt.",
-    "TabPhotos": "Photos",
+    "TabPhotos": "Fotos",
     "TabVideos": "Videos",
-    "HeaderWelcomeToEmby": "Welcome to Emby",
-    "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
-    "ButtonSkip": "Skip",
-    "TextConnectToServerManually": "Connect to server manually",
-    "ButtonSignInWithConnect": "Sign in with Emby Connect",
-    "ButtonConnect": "Connect",
-    "LabelServerHost": "Host:",
-    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "HeaderWelcomeToEmby": "Willkommen zu Emby",
+    "EmbyIntroMessage": "Mit Emby k\u00f6nnen Sie auf auf einfache Art und Weise Videos, Musik und Fotos zu Smartphones, Tablets und anderen Ger\u00e4ten von Ihrem Emby-Server senden.",
+    "ButtonSkip": "\u00dcberspringen",
+    "TextConnectToServerManually": "Verbinde manuell zum Server",
+    "ButtonSignInWithConnect": "Anmelden mit Emby Connect",
+    "ButtonConnect": "Verbinde",
+    "LabelServerHost": "Adresse:",
+    "LabelServerHostHelp": "192.168.1.100 oder https:\/\/myserver.com",
     "LabelServerPort": "Port:",
-    "HeaderNewServer": "New Server",
-    "ButtonChangeServer": "Change Server",
-    "HeaderConnectToServer": "Connect to Server"
+    "HeaderNewServer": "Neuer Server",
+    "ButtonChangeServer": "Wechsel Server",
+    "HeaderConnectToServer": "Verbinde zu Server",
+    "OptionReportList": "List View",
+    "OptionReportStatistics": "Statistics",
+    "OptionReportGrouping": "Grouping",
+    "HeaderExport": "Export",
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
