--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -1,5 +1,23 @@
 {
-    "TabWebClient": "Dispositivi Web",
+    "LabelExit": "Esci",
+    "LabelVisitCommunity": "Visita la Community",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Standard",
+    "LabelApiDocumentation": "Documentazione sulle Api",
+    "LabelDeveloperResources": "Risorse per i programmatori",
+    "LabelBrowseLibrary": "Esplora la libreria",
+    "LabelConfigureServer": "Configura Emby",
+    "LabelOpenLibraryViewer": "Apri visualizzatore libreria",
+    "LabelRestartServer": "Riavvia Server",
+    "LabelShowLogWindow": "Mostra finestra dei log",
+    "LabelPrevious": "Precedente",
+    "LabelFinish": "Finito",
+    "LabelNext": "Prossimo",
+    "LabelYoureDone": "Hai Finito!",
+    "WelcomeToProject": "Benvenuto in Emby",
+    "ThisWizardWillGuideYou": "Questa procedura ti guider\u00e0 durante il processo di installazione. Per cominciare, per favore seleziona la tua lingua preferita",
+    "TellUsAboutYourself": "Parlaci di te",
     "ButtonQuickStartGuide": "Guida rapida",
     "LabelYourFirstName": "Nome",
     "MoreUsersCanBeAddedLater": "Puoi aggiungere altri utenti in un secondo momento all'interno del pannello di configurazione",
@@ -1415,23 +1433,10 @@
     "HeaderNewServer": "New Server",
     "ButtonChangeServer": "Change Server",
     "HeaderConnectToServer": "Connect to Server",
-    "LabelExit": "Esci",
-    "LabelVisitCommunity": "Visita la Community",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Standard",
-    "LabelApiDocumentation": "Documentazione sulle Api",
-    "LabelDeveloperResources": "Risorse per i programmatori",
-    "LabelBrowseLibrary": "Esplora la libreria",
-    "LabelConfigureServer": "Configura Emby",
-    "LabelOpenLibraryViewer": "Apri visualizzatore libreria",
-    "LabelRestartServer": "Riavvia Server",
-    "LabelShowLogWindow": "Mostra finestra dei log",
-    "LabelPrevious": "Precedente",
-    "LabelFinish": "Finito",
-    "LabelNext": "Prossimo",
-    "LabelYoureDone": "Hai Finito!",
-    "WelcomeToProject": "Benvenuto in Emby",
-    "ThisWizardWillGuideYou": "Questa procedura ti guider\u00e0 durante il processo di installazione. Per cominciare, per favore seleziona la tua lingua preferita",
-    "TellUsAboutYourself": "Parlaci di te"
+    "OptionReportList": "List View",
+    "OptionReportStatistics": "Statistics",
+    "OptionReportGrouping": "Grouping",
+    "HeaderExport": "Export",
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
