--- a/MediaBrowser.Server.Implementations/Localization/Server/ko.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/ko.json
@@ -1,5 +1,15 @@
 {
-    "TabWebClient": "Web Client",
+    "LabelExit": "Schweinsteiger",
+    "LabelVisitCommunity": "Visit Community",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Standard",
+    "LabelApiDocumentation": "Api Documentation",
+    "LabelDeveloperResources": "Developer Resources",
+    "LabelBrowseLibrary": "Browse Library",
+    "LabelConfigureServer": "Configure Emby",
+    "LabelOpenLibraryViewer": "Open Library Viewer",
+    "LabelRestartServer": "Restart Server",
     "LabelShowLogWindow": "Show Log Window",
     "LabelPrevious": "Previous",
     "LabelFinish": "Finish",
@@ -1423,15 +1433,10 @@
     "HeaderNewServer": "New Server",
     "ButtonChangeServer": "Change Server",
     "HeaderConnectToServer": "Connect to Server",
-    "LabelExit": "Schweinsteiger",
-    "LabelVisitCommunity": "Visit Community",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Standard",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "Browse Library",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelOpenLibraryViewer": "Open Library Viewer",
-    "LabelRestartServer": "Restart Server"
+    "OptionReportList": "List View",
+    "OptionReportStatistics": "Statistics",
+    "OptionReportGrouping": "Grouping",
+    "HeaderExport": "Export",
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
