--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -1,5 +1,53 @@
 {
-    "TabWebClient": "Web Client",
+    "LabelExit": "Afsluiten",
+    "LabelVisitCommunity": "Bezoek Gemeenschap",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "Standaard",
+    "LabelApiDocumentation": "Api documentatie",
+    "LabelDeveloperResources": "Ontwikkelaars bronnen",
+    "LabelBrowseLibrary": "Bekijk bibliotheek",
+    "LabelConfigureServer": "Emby Configureren",
+    "LabelOpenLibraryViewer": "Open bibliotheek verkenner",
+    "LabelRestartServer": "Server herstarten",
+    "LabelShowLogWindow": "Toon log venster",
+    "LabelPrevious": "Vorige",
+    "LabelFinish": "Voltooien",
+    "LabelNext": "Volgende",
+    "LabelYoureDone": "Gereed!",
+    "WelcomeToProject": "Welkom bij Emby!",
+    "ThisWizardWillGuideYou": "Deze wizard helpt u door het setup-proces.",
+    "TellUsAboutYourself": "Vertel ons over uzelf",
+    "ButtonQuickStartGuide": "Snel start gids",
+    "LabelYourFirstName": "Uw voornaam:",
+    "MoreUsersCanBeAddedLater": "Meer gebruikers kunnen later via het dashboard worden toegevoegd.",
+    "UserProfilesIntro": "Emby heeft ingebouwde ondersteuning voor gebruikersprofielen die het mogelijk maken om elke gebruiker eigen scherminstellingen, afspeelinstellingen en ouderlijk toezicht te geven.",
+    "LabelWindowsService": "Windows Service",
+    "AWindowsServiceHasBeenInstalled": "Er is een Windows service ge\u00efnstalleerd.",
+    "WindowsServiceIntro1": "Emby Server draait normaalgesproken als een desktop applicatie met een icoon in het systeemvaak, maar als u dat wilt kunt u het als een achtergrondproces draaien. Het kan daarvoor worden gestart vanuit het Windows Services configuratiescherm.",
+    "WindowsServiceIntro2": "Wanneer u de Windows-service gebruikt, dan dient u er rekening mee te houden dat het niet op hetzelfde moment als de desktop applicatie kan worden uitgevoerd. Het is daarom vereist de desktop applicatie eerst af te sluiten voordat u de service gebruikt. De service moet worden geconfigureerd met beheerdersrechten via het configuratie scherm. Houd er rekening mee dat op dit moment de service niet automatisch kan worden bijgewerkt, zodat nieuwe versies dus handmatige interactie vereisen.",
+    "WizardCompleted": "Dat is alles wat we nu nodig hebben. Emby is begonnen met het verzamelen van informatie over uw media bibliotheek. Probeer sommige van onze apps en klik dan <b>Finish<\/b> om het <b>Server Dashboard<\/b> te bekijken.",
+    "LabelConfigureSettings": "Configureer instellingen",
+    "LabelEnableVideoImageExtraction": "Videobeeld uitpakken inschakelen",
+    "VideoImageExtractionHelp": "Voor video's die nog geen afbeeldingen hebben, en waarvoor geen afbeeldingen op Internet te vinden zijn. Dit voegt extra tijd toe aan de oorspronkelijke bibliotheek scan, maar resulteert in een mooiere weergave.",
+    "LabelEnableChapterImageExtractionForMovies": "Hoofdstuk afbeeldingen uitpakken voor Films",
+    "LabelChapterImageExtractionForMoviesHelp": "Uitpakken van hoofdstuk afbeeldingen biedt clients grafische scene selectie menu's. Het proces kan langzaam en processor intensief zijn en kan enkele gigabytes aan vrije ruimte vereisen. Het draait 's nachts als geplande taak, hoewel dit aangepast kan worden bij de geplande taken. Het wordt niet aanbevolen om deze taak tijdens piekuren te draaien.",
+    "LabelEnableAutomaticPortMapping": "Automatische poorttoewijzing inschakelen",
+    "LabelEnableAutomaticPortMappingHelp": "UPnP zorgt voor geautomatiseerde configuratie van de router voor gemakkelijke toegang op afstand. Dit werkt mogelijk niet met sommige routers.",
+    "HeaderTermsOfService": "Emby Service Voorwaarden",
+    "MessagePleaseAcceptTermsOfService": "Accepteer a.u.b. de voorwaarden en Privacybeleid voordat u doorgaat.",
+    "OptionIAcceptTermsOfService": "Ik accepteer de voorwaarden",
+    "ButtonPrivacyPolicy": "Privacybeleid",
+    "ButtonTermsOfService": "Service voorwaarden",
+    "HeaderDeveloperOptions": "Ontwikkelaar Opties",
+    "OptionEnableWebClientResponseCache": "Web client reactie caching inschakelen",
+    "OptionDisableForDevelopmentHelp": "Configureer deze zonodig voor web client ontwikkelingsdoeleinden.",
+    "OptionEnableWebClientResourceMinification": "Web client bron verkleining inschakelen",
+    "LabelDashboardSourcePath": "Web client bron pad:",
+    "LabelDashboardSourcePathHelp": "Wanneer u de server draait vanaf de bron, geeft u het pad naar de map dashboard-ui op. Alle web client bestanden worden geladen vanaf deze locatie.",
+    "ButtonConvertMedia": "Converteer media",
+    "ButtonOrganize": "Organiseren",
+    "LinkedToEmbyConnect": "Gekoppeld aan Emby Connect",
     "HeaderSupporterBenefits": "Voordelen voor Supporters",
     "HeaderAddUser": "Gebruiker Toevoegen",
     "LabelAddConnectSupporterHelp": "Om een \u200b\u200bgebruiker toe te voegen die niet in de lijst voorkomt, moet je eerst hun account koppelen aan Emby Connect uit hun gebruikersprofiel pagina.",
@@ -825,7 +873,7 @@
     "MessageNoSubtitleSearchResultsFound": "Geen zoekresultaten gevonden.",
     "TabDisplay": "Weergave",
     "TabLanguages": "Talen",
-    "TabAppSettings": "App Settings",
+    "TabAppSettings": "App Instellingen",
     "LabelEnableThemeSongs": "Theme songs inschakelen:",
     "LabelEnableBackdrops": "Achtergronden inschakelen:",
     "LabelEnableThemeSongsHelp": "Indien ingeschakeld, zullen theme songs in de achtergrond worden afgespeeld tijdens het browsen door de bibliotheek.",
@@ -1371,67 +1419,24 @@
     "HeaderViewStyles": "Bekijk stijlen",
     "LabelSelectViewStyles": "Enable enhanced presentations for:",
     "LabelSelectViewStylesHelp": "Bij inschakelen zullen overzichten met met categori\u00ebn zolas suggesties, recente, genres en meer getoond worden. Bij uitschakelen worden simpele mappen getoond.",
-    "TabPhotos": "Photos",
-    "TabVideos": "Videos",
-    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "TabPhotos": "Foto's",
+    "TabVideos": "Video's",
+    "HeaderWelcomeToEmby": "Welkom bij Emby",
     "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
     "ButtonSkip": "Skip",
     "TextConnectToServerManually": "Connect to server manually",
     "ButtonSignInWithConnect": "Sign in with Emby Connect",
     "ButtonConnect": "Connect",
     "LabelServerHost": "Host:",
-    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
-    "LabelServerPort": "Port:",
-    "HeaderNewServer": "New Server",
+    "LabelServerHostHelp": "192.168.1.100 of https:\/\/myserver.com",
+    "LabelServerPort": "Poort:",
+    "HeaderNewServer": "Nieuwe Server",
     "ButtonChangeServer": "Change Server",
     "HeaderConnectToServer": "Connect to Server",
-    "LabelExit": "Afsluiten",
-    "LabelVisitCommunity": "Bezoek Gemeenschap",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "Standaard",
-    "LabelApiDocumentation": "Api documentatie",
-    "LabelDeveloperResources": "Ontwikkelaars bronnen",
-    "LabelBrowseLibrary": "Bekijk bibliotheek",
-    "LabelConfigureServer": "Emby Configureren",
-    "LabelOpenLibraryViewer": "Open bibliotheek verkenner",
-    "LabelRestartServer": "Server herstarten",
-    "LabelShowLogWindow": "Toon log venster",
-    "LabelPrevious": "Vorige",
-    "LabelFinish": "Voltooien",
-    "LabelNext": "Volgende",
-    "LabelYoureDone": "Gereed!",
-    "WelcomeToProject": "Welkom bij Emby!",
-    "ThisWizardWillGuideYou": "Deze wizard helpt u door het setup-proces.",
-    "TellUsAboutYourself": "Vertel ons over uzelf",
-    "ButtonQuickStartGuide": "Snel start gids",
-    "LabelYourFirstName": "Uw voornaam:",
-    "MoreUsersCanBeAddedLater": "Meer gebruikers kunnen later via het dashboard worden toegevoegd.",
-    "UserProfilesIntro": "Emby heeft ingebouwde ondersteuning voor gebruikersprofielen die het mogelijk maken om elke gebruiker eigen scherminstellingen, afspeelinstellingen en ouderlijk toezicht te geven.",
-    "LabelWindowsService": "Windows Service",
-    "AWindowsServiceHasBeenInstalled": "Er is een Windows service ge\u00efnstalleerd.",
-    "WindowsServiceIntro1": "Emby Server draait normaalgesproken als een desktop applicatie met een icoon in het systeemvaak, maar als u dat wilt kunt u het als een achtergrondproces draaien. Het kan daarvoor worden gestart vanuit het Windows Services configuratiescherm.",
-    "WindowsServiceIntro2": "Wanneer u de Windows-service gebruikt, dan dient u er rekening mee te houden dat het niet op hetzelfde moment als de desktop applicatie kan worden uitgevoerd. Het is daarom vereist de desktop applicatie eerst af te sluiten voordat u de service gebruikt. De service moet worden geconfigureerd met beheerdersrechten via het configuratie scherm. Houd er rekening mee dat op dit moment de service niet automatisch kan worden bijgewerkt, zodat nieuwe versies dus handmatige interactie vereisen.",
-    "WizardCompleted": "Dat is alles wat we nu nodig hebben. Emby is begonnen met het verzamelen van informatie over uw media bibliotheek. Probeer sommige van onze apps en klik dan <b>Finish<\/b> om het <b>Server Dashboard<\/b> te bekijken.",
-    "LabelConfigureSettings": "Configureer instellingen",
-    "LabelEnableVideoImageExtraction": "Videobeeld uitpakken inschakelen",
-    "VideoImageExtractionHelp": "Voor video's die nog geen afbeeldingen hebben, en waarvoor geen afbeeldingen op Internet te vinden zijn. Dit voegt extra tijd toe aan de oorspronkelijke bibliotheek scan, maar resulteert in een mooiere weergave.",
-    "LabelEnableChapterImageExtractionForMovies": "Hoofdstuk afbeeldingen uitpakken voor Films",
-    "LabelChapterImageExtractionForMoviesHelp": "Uitpakken van hoofdstuk afbeeldingen biedt clients grafische scene selectie menu's. Het proces kan langzaam en processor intensief zijn en kan enkele gigabytes aan vrije ruimte vereisen. Het draait 's nachts als geplande taak, hoewel dit aangepast kan worden bij de geplande taken. Het wordt niet aanbevolen om deze taak tijdens piekuren te draaien.",
-    "LabelEnableAutomaticPortMapping": "Automatische poorttoewijzing inschakelen",
-    "LabelEnableAutomaticPortMappingHelp": "UPnP zorgt voor geautomatiseerde configuratie van de router voor gemakkelijke toegang op afstand. Dit werkt mogelijk niet met sommige routers.",
-    "HeaderTermsOfService": "Emby Service Voorwaarden",
-    "MessagePleaseAcceptTermsOfService": "Accepteer a.u.b. de voorwaarden en Privacybeleid voordat u doorgaat.",
-    "OptionIAcceptTermsOfService": "Ik accepteer de voorwaarden",
-    "ButtonPrivacyPolicy": "Privacybeleid",
-    "ButtonTermsOfService": "Service voorwaarden",
-    "HeaderDeveloperOptions": "Ontwikkelaar Opties",
-    "OptionEnableWebClientResponseCache": "Web client reactie caching inschakelen",
-    "OptionDisableForDevelopmentHelp": "Configureer deze zonodig voor web client ontwikkelingsdoeleinden.",
-    "OptionEnableWebClientResourceMinification": "Web client bron verkleining inschakelen",
-    "LabelDashboardSourcePath": "Web client bron pad:",
-    "LabelDashboardSourcePathHelp": "Wanneer u de server draait vanaf de bron, geeft u het pad naar de map dashboard-ui op. Alle web client bestanden worden geladen vanaf deze locatie.",
-    "ButtonConvertMedia": "Converteer media",
-    "ButtonOrganize": "Organiseren",
-    "LinkedToEmbyConnect": "Gekoppeld aan Emby Connect"
+    "OptionReportList": "List View",
+    "OptionReportStatistics": "Statistics",
+    "OptionReportGrouping": "Grouping",
+    "HeaderExport": "Export",
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
