--- a/MediaBrowser.Server.Implementations/Localization/Server/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/sv.json
@@ -1,5 +1,92 @@
 {
-    "TabWebClient": "Webbklient",
+    "LabelExit": "Avsluta",
+    "LabelVisitCommunity": "Bes\u00f6k v\u00e5rt diskussionsforum",
+    "LabelGithub": "Github",
+    "LabelSwagger": "Swagger",
+    "LabelStandard": "F\u00f6rval",
+    "LabelApiDocumentation": "Api Dokumentation",
+    "LabelDeveloperResources": "Resurser f\u00f6r utvecklare",
+    "LabelBrowseLibrary": "Bl\u00e4ddra i biblioteket",
+    "LabelConfigureServer": "Configure Emby",
+    "LabelOpenLibraryViewer": "\u00d6ppna biblioteksbl\u00e4ddraren",
+    "LabelRestartServer": "Starta om servern",
+    "LabelShowLogWindow": "Visa loggf\u00f6nstret",
+    "LabelPrevious": "F\u00f6reg\u00e5ende",
+    "LabelFinish": "Klart",
+    "LabelNext": "N\u00e4sta",
+    "LabelYoureDone": "Klart!",
+    "WelcomeToProject": "Welcome to Emby!",
+    "ThisWizardWillGuideYou": "Den h\u00e4r guiden hj\u00e4lper dig att g\u00f6ra de f\u00f6rsta inst\u00e4llningarna. F\u00f6r att b\u00f6rja var v\u00e4nlig v\u00e4lj \u00f6nskat spr\u00e5k.",
+    "TellUsAboutYourself": "Ber\u00e4tta om dig sj\u00e4lv",
+    "ButtonQuickStartGuide": "Snabbstartguide",
+    "LabelYourFirstName": "Ditt f\u00f6rnamn:",
+    "MoreUsersCanBeAddedLater": "Flera anv\u00e4ndare kan skapas senare i Kontrollpanelen.",
+    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
+    "LabelWindowsService": "Windows-tj\u00e4nst",
+    "AWindowsServiceHasBeenInstalled": "En Windows-tj\u00e4nst har installerats.",
+    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
+    "WindowsServiceIntro2": "Om Media Browser k\u00f6rs som en tj\u00e4nst, notera att den inte kan k\u00f6ras samtidigt som aktivitetsf\u00e4ltsikonen, s\u00e5 f\u00f6r att k\u00f6ra tj\u00e4nsten m\u00e5ste ikonen st\u00e4ngas. Tj\u00e4nsten m\u00e5ste ocks\u00e5 k\u00f6ras med administrat\u00f6rsr\u00e4ttigheter (st\u00e4lls in i kontrollpanelen Tj\u00e4nster). Automatiska uppdateringar fungerar heller inte med tj\u00e4nsten, dvs tj\u00e4nsten m\u00e5ste stoppas f\u00f6re manuell uppdatering och sedan \u00e5terstartas.",
+    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
+    "LabelConfigureSettings": "Inst\u00e4llningar",
+    "LabelEnableVideoImageExtraction": "Ta fram bildrutor ur videofiler",
+    "VideoImageExtractionHelp": "Dessa anv\u00e4nds f\u00f6r objekt som saknar bilder och d\u00e4r vi inte hittar n\u00e5gra vid s\u00f6kning p\u00e5 Internet. Detta g\u00f6r att den f\u00f6rsta genoms\u00f6kningen av biblioteket tar lite l\u00e4ngre tid, men ger en snyggare presentation.",
+    "LabelEnableChapterImageExtractionForMovies": "Ta fram kapitelbildrutor ur filmfiler",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelEnableAutomaticPortMapping": "Aktivera automatisk koppling av portar",
+    "LabelEnableAutomaticPortMappingHelp": "UPnP m\u00f6jligg\u00f6r automatisk inst\u00e4llning av din router s\u00e5 att du enkelt kan n\u00e5 Media Browser fr\u00e5n Internet. Detta kanske inte fungerar med alla routrar.",
+    "HeaderTermsOfService": "Emby Terms of Service",
+    "MessagePleaseAcceptTermsOfService": "V\u00e4nligen acceptera anv\u00e4ndarvillkoren och sekretesspolicy innan du forts\u00e4tter.",
+    "OptionIAcceptTermsOfService": "Jag accepterar anv\u00e4ndarvillkoren",
+    "ButtonPrivacyPolicy": "sekretesspolicy",
+    "ButtonTermsOfService": "Anv\u00e4ndarvillkor",
+    "HeaderDeveloperOptions": "Developer Options",
+    "OptionEnableWebClientResponseCache": "Enable web client response caching",
+    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
+    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
+    "LabelDashboardSourcePath": "Web client source path:",
+    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
+    "ButtonConvertMedia": "Convert media",
+    "ButtonOrganize": "Organize",
+    "LinkedToEmbyConnect": "Linked to Emby Connect",
+    "HeaderSupporterBenefits": "Supporter Benefits",
+    "HeaderAddUser": "Add User",
+    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
+    "LabelPinCode": "Pin code:",
+    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
+    "HeaderSync": "Sync",
+    "ButtonOk": "OK",
+    "ButtonCancel": "Avbryt",
+    "ButtonExit": "Exit",
+    "ButtonNew": "Nytillkommet",
+    "HeaderTV": "TV",
+    "HeaderAudio": "Ljud",
+    "HeaderVideo": "Video",
+    "HeaderPaths": "Paths",
+    "CategorySync": "Sync",
+    "TabPlaylist": "Playlist",
+    "HeaderEasyPinCode": "Easy Pin Code",
+    "HeaderGrownupsOnly": "Grown-ups Only!",
+    "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
+    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
+    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
+    "ButtonConfigurePinCode": "Configure pin code",
+    "HeaderAdultsReadHere": "Adults Read Here!",
+    "RegisterWithPayPal": "Register with PayPal",
+    "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
+    "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
+    "LabelSyncTempPath": "Temporary file path:",
+    "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
+    "LabelCustomCertificatePath": "Custom certificate path:",
+    "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
+    "TitleNotifications": "Notifications",
+    "ButtonDonateWithPayPal": "Donate with PayPal",
+    "OptionDetectArchiveFilesAsMedia": "Identifiera arkivfiler som media",
+    "OptionDetectArchiveFilesAsMediaHelp": "Om aktiverad, kommer filer med .rar och .zip f\u00f6rl\u00e4ngningar att uppt\u00e4ckas som mediefiler.",
+    "LabelEnterConnectUserName": "Anv\u00e4ndarnamn eller email:",
+    "LabelEnterConnectUserNameHelp": "This is your Emby online account user name or password.",
     "LabelEnableEnhancedMovies": "Enable enhanced movie displays",
     "LabelEnableEnhancedMoviesHelp": "When enabled, movies will be displayed as folders to include trailers, extras, cast & crew, and other related content.",
     "HeaderSyncJobInfo": "Synk jobb",
@@ -1346,92 +1433,10 @@
     "HeaderNewServer": "New Server",
     "ButtonChangeServer": "Change Server",
     "HeaderConnectToServer": "Connect to Server",
-    "LabelExit": "Avsluta",
-    "LabelVisitCommunity": "Bes\u00f6k v\u00e5rt diskussionsforum",
-    "LabelGithub": "Github",
-    "LabelSwagger": "Swagger",
-    "LabelStandard": "F\u00f6rval",
-    "LabelApiDocumentation": "Api Dokumentation",
-    "LabelDeveloperResources": "Resurser f\u00f6r utvecklare",
-    "LabelBrowseLibrary": "Bl\u00e4ddra i biblioteket",
-    "LabelConfigureServer": "Configure Emby",
-    "LabelOpenLibraryViewer": "\u00d6ppna biblioteksbl\u00e4ddraren",
-    "LabelRestartServer": "Starta om servern",
-    "LabelShowLogWindow": "Visa loggf\u00f6nstret",
-    "LabelPrevious": "F\u00f6reg\u00e5ende",
-    "LabelFinish": "Klart",
-    "LabelNext": "N\u00e4sta",
-    "LabelYoureDone": "Klart!",
-    "WelcomeToProject": "Welcome to Emby!",
-    "ThisWizardWillGuideYou": "Den h\u00e4r guiden hj\u00e4lper dig att g\u00f6ra de f\u00f6rsta inst\u00e4llningarna. F\u00f6r att b\u00f6rja var v\u00e4nlig v\u00e4lj \u00f6nskat spr\u00e5k.",
-    "TellUsAboutYourself": "Ber\u00e4tta om dig sj\u00e4lv",
-    "ButtonQuickStartGuide": "Snabbstartguide",
-    "LabelYourFirstName": "Ditt f\u00f6rnamn:",
-    "MoreUsersCanBeAddedLater": "Flera anv\u00e4ndare kan skapas senare i Kontrollpanelen.",
-    "UserProfilesIntro": "Emby includes built-in support for user profiles, enabling each user to have their own display settings, playstate and parental controls.",
-    "LabelWindowsService": "Windows-tj\u00e4nst",
-    "AWindowsServiceHasBeenInstalled": "En Windows-tj\u00e4nst har installerats.",
-    "WindowsServiceIntro1": "Emby Server normally runs as a desktop application with a tray icon, but if you prefer to run it as a background service, it can be started from the windows services control panel instead.",
-    "WindowsServiceIntro2": "Om Media Browser k\u00f6rs som en tj\u00e4nst, notera att den inte kan k\u00f6ras samtidigt som aktivitetsf\u00e4ltsikonen, s\u00e5 f\u00f6r att k\u00f6ra tj\u00e4nsten m\u00e5ste ikonen st\u00e4ngas. Tj\u00e4nsten m\u00e5ste ocks\u00e5 k\u00f6ras med administrat\u00f6rsr\u00e4ttigheter (st\u00e4lls in i kontrollpanelen Tj\u00e4nster). Automatiska uppdateringar fungerar heller inte med tj\u00e4nsten, dvs tj\u00e4nsten m\u00e5ste stoppas f\u00f6re manuell uppdatering och sedan \u00e5terstartas.",
-    "WizardCompleted": "That's all we need for now. Emby has begun collecting information about your media library. Check out some of our apps, and then click <b>Finish<\/b> to view the <b>Server Dashboard<\/b>.",
-    "LabelConfigureSettings": "Inst\u00e4llningar",
-    "LabelEnableVideoImageExtraction": "Ta fram bildrutor ur videofiler",
-    "VideoImageExtractionHelp": "Dessa anv\u00e4nds f\u00f6r objekt som saknar bilder och d\u00e4r vi inte hittar n\u00e5gra vid s\u00f6kning p\u00e5 Internet. Detta g\u00f6r att den f\u00f6rsta genoms\u00f6kningen av biblioteket tar lite l\u00e4ngre tid, men ger en snyggare presentation.",
-    "LabelEnableChapterImageExtractionForMovies": "Ta fram kapitelbildrutor ur filmfiler",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
-    "LabelEnableAutomaticPortMapping": "Aktivera automatisk koppling av portar",
-    "LabelEnableAutomaticPortMappingHelp": "UPnP m\u00f6jligg\u00f6r automatisk inst\u00e4llning av din router s\u00e5 att du enkelt kan n\u00e5 Media Browser fr\u00e5n Internet. Detta kanske inte fungerar med alla routrar.",
-    "HeaderTermsOfService": "Emby Terms of Service",
-    "MessagePleaseAcceptTermsOfService": "V\u00e4nligen acceptera anv\u00e4ndarvillkoren och sekretesspolicy innan du forts\u00e4tter.",
-    "OptionIAcceptTermsOfService": "Jag accepterar anv\u00e4ndarvillkoren",
-    "ButtonPrivacyPolicy": "sekretesspolicy",
-    "ButtonTermsOfService": "Anv\u00e4ndarvillkor",
-    "HeaderDeveloperOptions": "Developer Options",
-    "OptionEnableWebClientResponseCache": "Enable web client response caching",
-    "OptionDisableForDevelopmentHelp": "Configure these as needed for web client development purposes.",
-    "OptionEnableWebClientResourceMinification": "Enable web client resource minification",
-    "LabelDashboardSourcePath": "Web client source path:",
-    "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
-    "ButtonConvertMedia": "Convert media",
-    "ButtonOrganize": "Organize",
-    "LinkedToEmbyConnect": "Linked to Emby Connect",
-    "HeaderSupporterBenefits": "Supporter Benefits",
-    "HeaderAddUser": "Add User",
-    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their account to Emby Connect from their user profile page.",
-    "LabelPinCode": "Pin code:",
-    "OptionHideWatchedContentFromLatestMedia": "Hide watched content from latest media",
-    "HeaderSync": "Sync",
-    "ButtonOk": "OK",
-    "ButtonCancel": "Avbryt",
-    "ButtonExit": "Exit",
-    "ButtonNew": "Nytillkommet",
-    "HeaderTV": "TV",
-    "HeaderAudio": "Ljud",
-    "HeaderVideo": "Video",
-    "HeaderPaths": "Paths",
-    "CategorySync": "Sync",
-    "TabPlaylist": "Playlist",
-    "HeaderEasyPinCode": "Easy Pin Code",
-    "HeaderGrownupsOnly": "Grown-ups Only!",
-    "DividerOr": "-- or --",
-    "HeaderInstalledServices": "Installed Services",
-    "HeaderAvailableServices": "Available Services",
-    "MessageNoServicesInstalled": "No services are currently installed.",
-    "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
-    "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
-    "ButtonConfigurePinCode": "Configure pin code",
-    "HeaderAdultsReadHere": "Adults Read Here!",
-    "RegisterWithPayPal": "Register with PayPal",
-    "HeaderSyncRequiresSupporterMembership": "Sync Requires a Supporter Membership",
-    "HeaderEnjoyDayTrial": "Enjoy a 14 Day Free Trial",
-    "LabelSyncTempPath": "Temporary file path:",
-    "LabelSyncTempPathHelp": "Specify a custom sync working folder. Converted media created during the sync process will be stored here.",
-    "LabelCustomCertificatePath": "Custom certificate path:",
-    "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
-    "TitleNotifications": "Notifications",
-    "ButtonDonateWithPayPal": "Donate with PayPal",
-    "OptionDetectArchiveFilesAsMedia": "Identifiera arkivfiler som media",
-    "OptionDetectArchiveFilesAsMediaHelp": "Om aktiverad, kommer filer med .rar och .zip f\u00f6rl\u00e4ngningar att uppt\u00e4ckas som mediefiler.",
-    "LabelEnterConnectUserName": "Anv\u00e4ndarnamn eller email:",
-    "LabelEnterConnectUserNameHelp": "This is your Emby online account user name or password."
+    "OptionReportList": "List View",
+    "OptionReportStatistics": "Statistics",
+    "OptionReportGrouping": "Grouping",
+    "HeaderExport": "Export",
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
