--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_TW.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_TW.json
@@ -1,5 +1,4 @@
 {
-    "TabWebClient": "Web Client",
     "LabelExit": "\u96e2\u958b",
     "LabelVisitCommunity": "\u8a2a\u554f\u793e\u5340",
     "LabelGithub": "Github",
@@ -1433,5 +1432,11 @@
     "LabelServerPort": "Port:",
     "HeaderNewServer": "New Server",
     "ButtonChangeServer": "Change Server",
-    "HeaderConnectToServer": "Connect to Server"
+    "HeaderConnectToServer": "Connect to Server",
+    "OptionReportList": "List View",
+    "OptionReportStatistics": "Statistics",
+    "OptionReportGrouping": "Grouping",
+    "HeaderExport": "Export",
+    "HeaderColumns": "Columns",
+    "ButtonReset": "Reset"
 }
